--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- OG starts here -->
-    <meta property="og:site_name" content="NFT" />
-    <meta property="og:title" content="NFT - Put your investments on auto-pilot!"/>
-    <meta property="og:description" content="NFT - Engineered to be the most deflationary token in the world."/>
+    <meta property="og:site_name" content="Fuzion NFTs" />
+    <meta property="og:title" content="Fuzion NFTs - The next evolution of NFTs"/>
+    <meta property="og:description" content="Fuzion NFTs will come in 5 stages: Originals, Chained, Evolution, Adventure, Nirvana!"/>
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://feature-design.d3atcx2t57d2p.amplifyapp.com/nft-logo.png"/>
-    <meta property="og:url" content="https://feature-design.d3atcx2t57d2p.amplifyapp.com/" />
-    <title>NFT - Put your investments on auto-pilot!</title>
+    <meta property="og:image" content="https://nft.fuzion.team/nft-logo.png"/>
+    <meta property="og:url" content="https://nft.fuzion.team/" />
+    <title>Fuzion NFTs</title>
     <link rel="icon" href="./assets/img/nft-logo.png" type="image/gif" sizes="16x16">
 
     <!------- ALL LINKED CSS------->
@@ -25,7 +25,7 @@
     <div class="custom-container">
     <nav class="navbar navbar-expand-md">
         <a class="navbar-brand" href="#">
-            <img src="./assets/img/nft-logo.svg" alt="">
+            <img src="./assets/img/nft-logo.svg" alt="NFT logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
     <!-- Navbar ends here -->
 
     <!-- hero section starts here -->
-    <section>
+    <section class="s">
       <div class="custom-container">
         <div class="row">
           <div class="col-md-6 my-auto">
@@ -89,7 +89,7 @@
               </div>
               <div class="col-md-6 pr-5">
                 <p class="section-subheading">Japan Mecha universes</p>
-                <h1 class="section-heading">8,888 unique Mekas
+                <h1 class="section-heading">10,000 unique punks
                   who need Drivers.</h1>
                 <p class="section-txt">Quality comes first. The goal is to make our first drop as cool as possible so we can have freedom to develop the universe. We're still working on a number of rarity criteria, as well as a lot of new Lore concepts. The drop release date will be announced as soon as the project's quality and technical aspects are fully progressed. We also need to work hard with our community to make Discord and Twitter even cooler with new additions throughout time.</p>
               </div>
@@ -290,7 +290,7 @@
             <div class="col-md-4">
               <div class="step-card-2 text-center">
                 <img src="./assets/img/step-2.svg" alt="selling step 2">
-                <h3 class="py-3">Add your FTs</h3>
+                <h3 class="py-3">Add your NFTs</h3>
                 <p class="section-txt pt-4">Click on Connected in the header and select Create Sale. Select your NFT.
                 </p>
               </div>
@@ -367,7 +367,7 @@
       <div class="custom-container">
         <div class="row">
           <div class="col-md-6">
-            <p class="footer-txt">8,888 unique mekas who need drivers.</p>
+            <p class="footer-txt">10,000 unique punks who need owners.</p>
           </div>
           <div class="col-md-6">
             <ul>
