fix: typo fixed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="custom-container">
         <div class="row">
           <div class="col-md-6 my-auto">
-            <p class="section-subheading">Etherium Based currency</p>
+            <p class="section-subheading">Binance Smart Chain Based NFTs</p>
             <h1 class="section-heading">Transform Your<br> Digital Creation<br>
               to Cash</h1>
               <div class="input-group mt-4 explore-btn">
@@ -88,9 +88,9 @@
                 <img src="./assets/img/punk-7480.svg" alt="mekas img" class="mekas-img">
               </div>
               <div class="col-md-6 pr-5">
-                <p class="section-subheading">Japan Mecha universes</p>
+                <p class="section-subheading">Fuzion Punk Universe</p>
                 <h1 class="section-heading">10,000 unique punks
-                  who need Drivers.</h1>
+                  who need Owners.</h1>
                 <p class="section-txt">Quality comes first. The goal is to make our first drop as cool as possible so we can have freedom to develop the universe. We're still working on a number of rarity criteria, as well as a lot of new Lore concepts. The drop release date will be announced as soon as the project's quality and technical aspects are fully progressed. We also need to work hard with our community to make Discord and Twitter even cooler with new additions throughout time.</p>
               </div>
             </div>
