--- a/index.html
+++ b/index.html
@@ -22,24 +22,57 @@
 </head>
 <body>
     <!-- Navbar starts here -->
-    <div class="custom-container">
-    <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand" href="#">
+    
+    <nav class="navbar navbar-expand-lg fixed-top fixed-header">
+      <div class="custom-container d-flex">
+        <a class="navbar-brand pt-2" href="#">
             <img src="./assets/img/nft-logo.svg" alt="NFT logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
+          <svg
+          xmlns="http://www.w3.org/2000/svg"
+          x="0px"
+          y="0px"
+          width="24"
+          height="24"
+          viewBox="0 0 172 172"
+          style="fill: #000000"
+        >
+          <g
+            fill="none"
+            fill-rule="nonzero"
+            stroke="none"
+            stroke-width="1"
+            stroke-linecap="butt"
+            stroke-linejoin="miter"
+            stroke-miterlimit="10"
+            stroke-dasharray=""
+            stroke-dashoffset="0"
+            font-family="none"
+            font-weight="none"
+            font-size="none"
+            text-anchor="none"
+            style="mix-blend-mode: normal"
+          >
+            <path d="M0,172v-172h172v172z" fill="none"></path>
+            <g fill="#ffffff">
+              <path
+                d="M14.33333,35.83333v14.33333h143.33333v-14.33333zM14.33333,78.83333v14.33333h143.33333v-14.33333zM14.33333,121.83333v14.33333h143.33333v-14.33333z"
+              ></path>
+            </g>
+          </g>
+        </svg>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link px-5" href="#">Home</a>
+              <a class="nav-link mx-5" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-5" href="#">Roadmap</a>
+              <a class="nav-link mx-5" href="#">Roadmap</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-5" href="#">Marketplace</a>
+              <a class="nav-link mx-5" href="#">Marketplace</a>
             </li>
           </ul>
           <ul class="ml-auto">
@@ -48,12 +81,12 @@
               </li>
           </ul>
         </div>
+      </div>
       </nav>
-    </div>
     <!-- Navbar ends here -->
 
     <!-- hero section starts here -->
-    <section class="s">
+    <section class="hero-section">
       <div class="custom-container">
         <div class="row">
           <div class="col-md-6 my-auto">
@@ -81,8 +114,8 @@
     <section>
       <div class="custom-container">
         <div class="row">
-          <div class="offset-1"></div>
-          <div class="col-md-10 mekas-inner">
+          <div class="offset-lg-1"></div>
+          <div class="col-lg-10 col-md-12 mekas-inner">
             <div class="row">
               <div class="col-md-6 d-flex justify-content-center">
                 <img src="./assets/img/punk-7480.svg" alt="mekas img" class="mekas-img">
@@ -95,7 +128,7 @@
               </div>
             </div>
           </div>
-          <div class="offset-1"></div>
+          <div class="offset-lg-1"></div>
         </div>
       </div>
     </section>
@@ -159,7 +192,7 @@
           <div class="col-md-8 position-relative">
             <div class="tab-content" id="v-pills-tabContent">
               <div class="tab-pane fade show active" id="launch-roadmap" role="tabpanel" aria-labelledby="launch-roadmap-tab">
-                <img src="./assets/img/robot.svg" alt="robot img" class="robot-img">
+                <img src="./assets/img/rocket.svg" alt="robot img" class="rocket-img">
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
                     <p class="section-subheading mb-0">Step 01</p>
@@ -171,7 +204,7 @@
                 </div>
               </div>
               <div class="tab-pane fade" id="physical-part" role="tabpanel" aria-labelledby="physical-part-tab">
-                <img src="./assets/img/robot.svg" alt="robot img" class="robot-img">
+                <img src="./assets/img/rocket.svg" alt="robot img" class="rocket-img">
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
                     <p class="section-subheading mb-0">Step 02</p>
@@ -183,7 +216,7 @@
                 </div>
               </div>
               <div class="tab-pane fade" id="mekaverse-artists" role="tabpanel" aria-labelledby="mekaverse-artists-tab">
-                <img src="./assets/img/robot.svg" alt="robot img" class="robot-img">
+                <img src="./assets/img/rocket.svg" alt="robot img" class="rocket-img">
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
                     <p class="section-subheading mb-0">Step 03</p>
@@ -195,7 +228,7 @@
                 </div>
               </div>
               <div class="tab-pane fade" id="meka-multiverse" role="tabpanel" aria-labelledby="meka-multiverse-tab">
-                <img src="./assets/img/robot.svg" alt="robot img" class="robot-img">
+                <img src="./assets/img/rocket.svg" alt="robot img" class="rocket-img">
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
                     <p class="section-subheading mb-0">Step 04</p>
@@ -207,7 +240,7 @@
                 </div>
               </div>
               <div class="tab-pane fade" id="future-mekas" role="tabpanel" aria-labelledby="future-mekas-tab">
-                <img src="./assets/img/robot.svg" alt="robot img" class="robot-img">
+                <img src="./assets/img/rocket.svg" alt="robot img" class="rocket-img">
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
                     <p class="section-subheading mb-0">Step 05</p>
@@ -351,14 +384,14 @@
     <section class="footer-section">
       <div class="custom-container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-6 col-md-5">
             <img src="./assets/img/nft-logo.svg" alt="NFT logo">
           </div>
-          <div class="col-md-6">
-            <ul class="pt-3">
-              <li class="px-3"><a href="#">HOME</a></li>
-              <li class="px-3"><a href="#">TERMS & CONDITIONS</a></li>
-              <li class="px-3"><a href="#">SMART CONTRACT</a></li>
+          <div class="col-lg-6 col-md-7">
+            <ul class="pt-3 footer-links">
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">TERMS & CONDITIONS</a></li>
+              <li><a href="#">SMART CONTRACT</a></li>
             </ul>
           </div>
         </div>
@@ -366,29 +399,34 @@
       <hr class="footer-border">
       <div class="custom-container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-6 col-md-5">
             <p class="footer-txt">10,000 unique punks who need owners.</p>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6 col-md-7">
             <ul>
-              <li class="px-3">
+              <li class="pr-2">
                 <a href="">
-                  <img src="./assets/img/facebook.svg" alt="facebook icon" class="social-icon" width="27px">
+                  <img src="./assets/img/mail-icon.svg" alt="mail icon" class="social-icon" width="45px">
                 </a>
               </li>
-              <li class="px-3">
+              <li class="pr-2">
                 <a href="">
-                  <img src="./assets/img/twitter.svg" alt="facebook icon" class="social-icon" width="27px">
+                  <img src="./assets/img/facebook-icon.svg" alt="facebook icon" class="social-icon" width="45px">
                 </a>
               </li>
-              <li class="px-3">
+              <li class="pr-2">
                 <a href="">
-                  <img src="./assets/img/instagram.svg" alt="facebook icon" class="social-icon" width="27px">
+                  <img src="./assets/img/twitter-icon.svg" alt="twitter icon" class="social-icon" width="45px">
                 </a>
               </li>
-              <li class="px-3">
+              <li class="pr-2">
                 <a href="">
-                  <img src="./assets/img/discord.svg" alt="facebook icon" class="social-icon" width="27px">
+                  <img src="./assets/img/telegram-icon.svg" alt="telegram icon" class="social-icon" width="45px">
+                </a>
+              </li>
+              <li class="pr-2">
+                <a href="">
+                  <img src="./assets/img/ticktok-icon.svg" alt="ticktok icon" class="social-icon" width="45px">
                 </a>
               </li>
             </ul>
@@ -396,7 +434,7 @@
         </div>
         <div class="row pt-5">
           <div class="col-md-12">
-            <p class="text-center footer-txt">©2021 MekaVerse. All rights reserved.</p>
+            <p class="text-center footer-txt">©2021 FuzionChain. All rights reserved.</p>
           </div>
         </div>
       </div>
@@ -407,5 +445,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
+    <!-- custom js -->
+    <script src="./assets/js/custom.js"></script>
+  </body>
 </html>
