--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     <!-- Navbar starts here -->
 
     <nav class="navbar navbar-expand-lg fixed-top fixed-header">
-      <div class="custom-container d-flex">
+      <div class="custom-container nav-row">
         <a class="navbar-brand pt-2" href="#">
           <img src="./assets/img/nft-logo.svg" alt="NFT logo" />
         </a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler float-right mt-3"
           type="button"
           data-toggle="collapse"
           data-target="#collapsibleNavbar"
@@ -87,13 +87,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link mx-5" href="#">Home</a>
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-5" href="#">Roadmap</a>
+              <a class="nav-link" href="#">Roadmap</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-5" href="#">Marketplace</a>
+              <a class="nav-link" href="#">Marketplace</a>
             </li>
           </ul>
           <ul class="ml-auto">
@@ -186,11 +186,11 @@
     <section class="artworks-section">
       <div class="container-fluid">
         <div class="row">
-          <div class="offset-2"></div>
-          <div class="col-md-8">
+          <div class="offset-md-2"></div>
+          <div class="col-md-8 col-sm-12">
             <h1 class="section-heading">Artworks</h1>
           </div>
-          <div class="offset-2"></div>
+          <div class="offset-md-2"></div>
         </div>
       </div>
       <div class="custom-container">
@@ -213,7 +213,7 @@
             <img
               src="./assets/img/artwork-3.svg"
               alt="artwork 3"
-              class="img-fluid"
+              class="img-fluid artwork-3"
             />
           </div>
         </div>
@@ -493,7 +493,7 @@
             <img
               src="./assets/img/artwork-4.svg"
               alt="artwork 4"
-              class="img-fluid mt-2"
+              class="img-fluid mt-2 mb-3"
             />
           </div>
           <div class="col-md-4 text-center">
@@ -501,7 +501,7 @@
             <img
               src="./assets/img/artwork-5.svg"
               alt="artwork 5"
-              class="img-fluid mt-2"
+              class="img-fluid mt-2 artwork-5"
               width="85%"
             />
           </div>
@@ -510,7 +510,7 @@
             <img
               src="./assets/img/artwork-6.svg"
               alt="artwork 6"
-              class="img-fluid mt-2"
+              class="img-fluid mt-2 artwork-6"
               width="85%"
             />
           </div>
@@ -521,7 +521,7 @@
             <img
               src="./assets/img/artwork-7.svg"
               alt="artwork 7"
-              class="img-fluid mt-2"
+              class="img-fluid mt-2 mb-3"
             />
           </div>
           <div class="col-md-4 text-center">
@@ -529,7 +529,7 @@
             <img
               src="./assets/img/artwork-8.svg"
               alt="artwork 8"
-              class="img-fluid mt-2"
+              class="img-fluid mt-2 artwork-8"
               width="85%"
             />
           </div>
@@ -538,7 +538,7 @@
             <img
               src="./assets/img/artwork-9.svg"
               alt="artwork 9"
-              class="img-fluid mt-2"
+              class="img-fluid mt-2 artwork-9"
               width="85%"
             />
           </div>
@@ -655,7 +655,7 @@
     <section class="footer-section">
       <div class="custom-container">
         <div class="row">
-          <div class="col-lg-6 col-md-5">
+          <div class="col-lg-6 col-md-5 footer-logo">
             <img src="./assets/img/nft-logo.svg" alt="NFT logo" />
           </div>
           <div class="col-lg-6 col-md-7">
@@ -674,7 +674,7 @@
             <p class="footer-txt">10,000 unique punks who need owners.</p>
           </div>
           <div class="col-lg-6 col-md-7">
-            <ul>
+            <ul class="social-icons-list">
               <li class="pr-2">
                 <a href="">
                   <img
