--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- OG starts here -->
-    <meta property="og:site_name" content="Fuzion NFTs" />
+    <meta property="og:site-name" content="Fuzion NFTs" />
     <meta
       property="og:title"
       content="Fuzion NFTs - The next evolution of NFTs"
@@ -116,10 +116,10 @@
             <p class="section-subheading">Binance Smart Chain Based NFTs</p>
             <h1 class="section-heading">
               Transform Your<br />
-              Digital Creation<br />
-              to Cash
+              Digital Creation
             </h1>
-            <div class="input-group mt-4 explore-btn">
+            <div class="d-flex mt-5">
+            <div class="input-group explore-btn">
               <a href="" class="form-control explore-btn-inner">Explore</a>
               <div class="input-group-prepend">
                 <div class="input-group-text">
@@ -131,22 +131,95 @@
                 </div>
               </div>
             </div>
+            <a href="" class="mint-btn">MINT YOUR NFT</a>
           </div>
-          <div class="col-md-6">
-            <img
-              src="./assets/img/hero-img.svg"
-              alt="hero img"
-              class="hero-img img-fluid"
-            />
+          </div>
+          <div class="offset-md-6">
           </div>
         </div>
       </div>
     </section>
     <!-- hero section ends here -->
 
-    <!-- mekas section starts here -->
-    <section>
+    <!-- why fuzion section starts here -->
+    <section class="feature-section">
       <div class="custom-container">
+        <div class="row">
+          <div class="col-md-5">
+            <h1 class="section-heading text-center">Why Fuzion</h1>
+          </div>
+          <div class="col-md-7">
+            <div class="row">
+              <div class="col-1">
+                <hr class="pt-4" />
+              </div>
+              <div class="col-11">
+                <p class="section-txt pt-4 pl-4">
+                  Whilst minting, Fuzion Punk utilized a provably fair system with randomization; this meant that everyone who minted one of the original 10,000 had an equal chance of minting a rare Fuzion Punk. If you are reading this now and missed the original mint, don't lose hope. Join the discord, trade, barter and enter competitions to get your very own.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="offset-md-2"></div>
+          <div class="col-md-8">
+            <div class="feature-block">
+              <div class="row no-gutters h-100">
+                <div class="col-md-2">
+                  <div class="feature-block-icon d-flex justify-content-center h-100">
+                    <img src="./assets/img/minting-icon.svg" alt="Minting icon" class="my-auto" height="80px" width="80px">
+                  </div>
+                </div>
+                <div class="col-md-10">
+                  <div class="feature-block-content">
+                    <h4 class="block-content-heading">Minting Fees</h4>
+                    <p><span class="block-content-strip">Minting Fee: The cost of mining a unique Fuzion Punk NFT</span></p>
+                    <ul class="block-content-list">
+                      <li>14% to NFT Holders</li>
+                      <li>10% to referrals (if no referral exists then will be split between 5 & 6)</li>
+                      <li>4% to PAZ holders</li>
+                      <li>20% to Team Expenses</li>
+                      <li>20% to Team Expenses</li>
+                      <li>30% to Development Fund DAO</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="feature-block mt-3">
+              <div class="row no-gutters h-100">
+                <div class="col-md-2">
+                  <div class="feature-block-icon d-flex justify-content-center h-100">
+                    <img src="./assets/img/royalties-icon.svg" alt="Royalties icon" class="my-auto" height="80px" width="80px">
+                  </div>
+                </div>
+                <div class="col-md-10">
+                  <div class="feature-block-content">
+                    <h4 class="block-content-heading">Royalties</h4>
+                    <p><span class="block-content-strip">Royalties: Fees from the Fuzion NFT Marketplace.</span></p>
+                    <p><span class="block-content-strip">The Listing and Delisting Fee is to prevent users from spamming the marketplace.</span></p>
+                    <ul class="block-content-list">
+                      <li>7% reflections to all NFT Holders</li>
+                      <li>70% royalties to the original minter </li>
+                      <li>0.05 BNB Listing Fee reflected to all NFT Holders</li>
+                      <li>0.05 BNB Delisting Fee reflected to all NFT Holders</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="offset-md-2"></div>
+        </div>
+      </div>
+    </section>
+    <!-- why fuzion section ends here -->
+
+    <!-- mecha section starts here -->
+    <section class="mecha-section">
+      <!-- <div class="custom-container">
         <div class="row">
           <div class="offset-lg-1"></div>
           <div class="col-lg-10 col-md-12 mekas-inner">
@@ -178,9 +251,32 @@
           </div>
           <div class="offset-lg-1"></div>
         </div>
-      </div>
+      </div> -->
+     <div class="custom-container">
+       <div class="row">
+          <div class="col-md-6 d-flex justify-content-center">
+            <img src="./assets/img/japan-mecha.svg" alt="Mecha img" class="img-fluid mecha-img">
+          </div>
+          <div class="col-md-6 my-auto">
+            <p class="section-subheading">Fuzion Punk Universe</p>
+                <h1 class="section-heading">
+                  10,000 unique punks who need Owners.
+                </h1>
+                <p class="section-txt">
+                  Quality comes first. The goal is to make our first drop as
+                  cool as possible so we can have freedom to develop the
+                  universe. We're still working on a number of rarity criteria,
+                  as well as a lot of new Lore concepts. The drop release date
+                  will be announced as soon as the project's quality and
+                  technical aspects are fully progressed. We also need to work
+                  hard with our community to make Discord and Twitter even
+                  cooler with new additions throughout time.
+                </p>
+          </div>
+       </div>
+     </div>
     </section>
-    <!-- mekas section ends here -->
+    <!-- mecha section ends here -->
 
     <!-- artworks section starts here -->
     <section class="artworks-section">
@@ -245,7 +341,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row mt-4">
           <div class="col-md-4">
             <div
               class="nav flex-column nav-pills roadmap-list"
@@ -314,9 +410,9 @@
                 aria-labelledby="launch-roadmap-tab"
               >
                 <img
-                  src="./assets/img/rocket.svg"
-                  alt="robot img"
-                  class="rocket-img"
+                  src="./assets/img/boy.svg"
+                  alt="boy img"
+                  class="boy-img"
                 />
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
@@ -345,9 +441,9 @@
                 aria-labelledby="physical-part-tab"
               >
                 <img
-                  src="./assets/img/rocket.svg"
+                  src="./assets/img/boy.svg"
                   alt="robot img"
-                  class="rocket-img"
+                  class="boy-img"
                 />
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
@@ -376,9 +472,9 @@
                 aria-labelledby="mekaverse-artists-tab"
               >
                 <img
-                  src="./assets/img/rocket.svg"
+                  src="./assets/img/boy.svg"
                   alt="robot img"
-                  class="rocket-img"
+                  class="boy-img"
                 />
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
@@ -407,9 +503,9 @@
                 aria-labelledby="meka-multiverse-tab"
               >
                 <img
-                  src="./assets/img/rocket.svg"
+                  src="./assets/img/boy.svg"
                   alt="robot img"
-                  class="rocket-img"
+                  class="boy-img"
                 />
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
@@ -438,9 +534,9 @@
                 aria-labelledby="future-mekas-tab"
               >
                 <img
-                  src="./assets/img/rocket.svg"
+                  src="./assets/img/boy.svg"
                   alt="robot img"
-                  class="rocket-img"
+                  class="boy-img"
                 />
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
@@ -469,84 +565,6 @@
     </section>
     <!-- roadmap section ends here -->
 
-    <!-- team section starts here -->
-    <section class="team-section">
-      <div class="custom-container">
-        <div class="row">
-          <div class="offset-md-4"></div>
-          <div class="col-md-5">
-            <p class="section-subheading">Who we are</p>
-            <h1 class="section-heading">Creative teams</h1>
-            <p class="section-txt">
-              Hi! Mattey & Matt. B are two friends currently focusing on 3D &
-              Art direction. We have been working hard to establish our own
-              style, and we're continuously looking for new ways to push
-              ourselves. We also worked with Apple, Microsoft, MTV, Adobe,
-              Adidas, Nike and more!
-            </p>
-          </div>
-          <div class="offset-md-3"></div>
-        </div>
-        <div class="row mt-5">
-          <div class="col-md-4">
-            <h3>Matty</h3>
-            <img
-              src="./assets/img/artwork-4.svg"
-              alt="artwork 4"
-              class="img-fluid mt-2 mb-3"
-            />
-          </div>
-          <div class="col-md-4 text-center">
-            <h3 class="float-left ml-4">NFT Artworks</h3>
-            <img
-              src="./assets/img/artwork-5.svg"
-              alt="artwork 5"
-              class="img-fluid mt-2 artwork-5"
-              width="85%"
-            />
-          </div>
-          <div class="col-md-4 text-center">
-            <h3>&nbsp;</h3>
-            <img
-              src="./assets/img/artwork-6.svg"
-              alt="artwork 6"
-              class="img-fluid mt-2 artwork-6"
-              width="85%"
-            />
-          </div>
-        </div>
-        <div class="row mt-5">
-          <div class="col-md-4">
-            <h3>Matt. B</h3>
-            <img
-              src="./assets/img/artwork-7.svg"
-              alt="artwork 7"
-              class="img-fluid mt-2 mb-3"
-            />
-          </div>
-          <div class="col-md-4 text-center">
-            <h3 class="float-left ml-4">NFT Artworks</h3>
-            <img
-              src="./assets/img/artwork-8.svg"
-              alt="artwork 8"
-              class="img-fluid mt-2 artwork-8"
-              width="85%"
-            />
-          </div>
-          <div class="col-md-4 text-center">
-            <h3>&nbsp;</h3>
-            <img
-              src="./assets/img/artwork-9.svg"
-              alt="artwork 9"
-              class="img-fluid mt-2 artwork-9"
-              width="85%"
-            />
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- team section ends here -->
-
     <!-- selling steps section starts here -->
     <section class="selling-steps-section">
       <div class="custom-container">
@@ -567,7 +585,7 @@
                   Set up<br />
                   your wallet
                 </h3>
-                <p class="section-txt">
+                <p>
                   Once you’ve set up your wallet of choice, connect it to NFT
                   marketplace by clicking NOT CONNECTED in the header.
                 </p>
@@ -577,7 +595,7 @@
               <div class="step-card-2 text-center">
                 <img src="./assets/img/step-2.svg" alt="selling step 2" />
                 <h3 class="py-3">Add your NFTs</h3>
-                <p class="section-txt pt-4">
+                <p class="pt-4">
                   Click on Connected in the header and select Create Sale.
                   Select your NFT.
                 </p>
@@ -590,7 +608,7 @@
                   List them<br />
                   for sale
                 </h3>
-                <p class="section-txt">
+                <p>
                   Once you’ve set up your wallet of choice, connect it to NFT
                   marketplace by clicking NOT CONNECTED in the header.
                 </p>
@@ -600,8 +618,8 @@
         </div>
         <div class="row">
           <div class="col-md-12 d-flex justify-content-center">
-            <div class="input-group mt-5 explore-btn">
-              <a href="" class="form-control explore-btn-inner">Explore</a>
+            <div class="input-group mt-5 explore-btn" style="width: 185px;">
+              <a href="" class="form-control explore-btn-inner">MINT YOUR NFT</a>
               <div class="input-group-prepend">
                 <div class="input-group-text">
                   <img
