--- a/index.html
+++ b/index.html
@@ -119,23 +119,22 @@
               Digital Creation
             </h1>
             <div class="d-flex mt-5">
-            <div class="input-group explore-btn">
-              <a href="" class="form-control explore-btn-inner">Explore</a>
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <img
-                    src="./assets/img/right-arrow.png"
-                    alt="right arrow"
-                    class="right-arrow"
-                  />
+              <div class="input-group explore-btn">
+                <a href="" class="form-control explore-btn-inner">Explore</a>
+                <div class="input-group-prepend">
+                  <div class="input-group-text">
+                    <img
+                      src="./assets/img/right-arrow.png"
+                      alt="right arrow"
+                      class="right-arrow"
+                    />
+                  </div>
                 </div>
               </div>
+              <a href="" class="mint-btn">MINT YOUR NFT</a>
             </div>
-            <a href="" class="mint-btn">MINT YOUR NFT</a>
           </div>
-          </div>
-          <div class="offset-md-6">
-          </div>
+          <div class="offset-md-6"></div>
         </div>
       </div>
     </section>
@@ -155,7 +154,12 @@
               </div>
               <div class="col-11">
                 <p class="section-txt pt-4 pl-4">
-                  Whilst minting, Fuzion Punk utilized a provably fair system with randomization; this meant that everyone who minted one of the original 10,000 had an equal chance of minting a rare Fuzion Punk. If you are reading this now and missed the original mint, don't lose hope. Join the discord, trade, barter and enter competitions to get your very own.
+                  Whilst minting, Fuzion Punk utilized a provably fair system
+                  with randomization; this meant that everyone who minted one of
+                  the original 10,000 had an equal chance of minting a rare
+                  Fuzion Punk. If you are reading this now and missed the
+                  original mint, don't lose hope. Join the discord, trade,
+                  barter and enter competitions to get your very own.
                 </p>
               </div>
             </div>
@@ -168,17 +172,33 @@
             <div class="feature-block">
               <div class="row no-gutters h-100">
                 <div class="col-md-2">
-                  <div class="feature-block-icon d-flex justify-content-center h-100">
-                    <img src="./assets/img/minting-icon.svg" alt="Minting icon" class="my-auto" height="80px" width="80px">
+                  <div
+                    class="feature-block-icon d-flex justify-content-center h-100"
+                  >
+                    <img
+                      src="./assets/img/minting-icon.svg"
+                      alt="Minting icon"
+                      class="my-auto"
+                      height="80px"
+                      width="80px"
+                    />
                   </div>
                 </div>
                 <div class="col-md-10">
                   <div class="feature-block-content">
                     <h4 class="block-content-heading">Minting Fees</h4>
-                    <p><span class="block-content-strip">Minting Fee: The cost of mining a unique Fuzion Punk NFT</span></p>
+                    <p>
+                      <span class="block-content-strip"
+                        >Minting Fee: The cost of mining a unique Fuzion Punk
+                        NFT</span
+                      >
+                    </p>
                     <ul class="block-content-list">
                       <li>14% to NFT Holders</li>
-                      <li>10% to referrals (if no referral exists then will be split between 5 & 6)</li>
+                      <li>
+                        10% to referrals (if no referral exists then will be
+                        split between 5 & 6)
+                      </li>
                       <li>4% to PAZ holders</li>
                       <li>20% to Team Expenses</li>
                       <li>20% to Team Expenses</li>
@@ -191,20 +211,39 @@
             <div class="feature-block mt-3">
               <div class="row no-gutters h-100">
                 <div class="col-md-2">
-                  <div class="feature-block-icon d-flex justify-content-center h-100">
-                    <img src="./assets/img/royalties-icon.svg" alt="Royalties icon" class="my-auto" height="80px" width="80px">
+                  <div
+                    class="feature-block-icon d-flex justify-content-center h-100"
+                  >
+                    <img
+                      src="./assets/img/royalties-icon.svg"
+                      alt="Royalties icon"
+                      class="my-auto"
+                      height="80px"
+                      width="80px"
+                    />
                   </div>
                 </div>
                 <div class="col-md-10">
                   <div class="feature-block-content">
                     <h4 class="block-content-heading">Royalties</h4>
-                    <p><span class="block-content-strip">Royalties: Fees from the Fuzion NFT Marketplace.</span></p>
-                    <p><span class="block-content-strip">The Listing and Delisting Fee is to prevent users from spamming the marketplace.</span></p>
+                    <p>
+                      <span class="block-content-strip"
+                        >Royalties: Fees from the Fuzion NFT Marketplace.</span
+                      >
+                    </p>
+                    <p>
+                      <span class="block-content-strip"
+                        >The Listing and Delisting Fee is to prevent users from
+                        spamming the marketplace.</span
+                      >
+                    </p>
                     <ul class="block-content-list">
                       <li>7% reflections to all NFT Holders</li>
-                      <li>70% royalties to the original minter </li>
+                      <li>70% royalties to the original minter</li>
                       <li>0.05 BNB Listing Fee reflected to all NFT Holders</li>
-                      <li>0.05 BNB Delisting Fee reflected to all NFT Holders</li>
+                      <li>
+                        0.05 BNB Delisting Fee reflected to all NFT Holders
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -252,29 +291,33 @@
           <div class="offset-lg-1"></div>
         </div>
       </div> -->
-     <div class="custom-container">
-       <div class="row">
+      <div class="custom-container">
+        <div class="row">
           <div class="col-md-6 d-flex justify-content-center">
-            <img src="./assets/img/japan-mecha.svg" alt="Mecha img" class="img-fluid mecha-img">
+            <img
+              src="./assets/img/japan-mecha.svg"
+              alt="Mecha img"
+              class="img-fluid mecha-img"
+            />
           </div>
           <div class="col-md-6 my-auto">
             <p class="section-subheading">Fuzion Punk Universe</p>
-                <h1 class="section-heading">
-                  10,000 unique punks who need Owners.
-                </h1>
-                <p class="section-txt">
-                  Quality comes first. The goal is to make our first drop as
-                  cool as possible so we can have freedom to develop the
-                  universe. We're still working on a number of rarity criteria,
-                  as well as a lot of new Lore concepts. The drop release date
-                  will be announced as soon as the project's quality and
-                  technical aspects are fully progressed. We also need to work
-                  hard with our community to make Discord and Twitter even
-                  cooler with new additions throughout time.
-                </p>
+            <h1 class="section-heading">
+              10,000 unique punks who need Owners.
+            </h1>
+            <p class="section-txt">
+              Quality comes first. The goal is to make our first drop as cool as
+              possible so we can have freedom to develop the universe. We're
+              still working on a number of rarity criteria, as well as a lot of
+              new Lore concepts. The drop release date will be announced as soon
+              as the project's quality and technical aspects are fully
+              progressed. We also need to work hard with our community to make
+              Discord and Twitter even cooler with new additions throughout
+              time.
+            </p>
           </div>
-       </div>
-     </div>
+        </div>
+      </div>
     </section>
     <!-- mecha section ends here -->
 
@@ -409,11 +452,7 @@
                 role="tabpanel"
                 aria-labelledby="launch-roadmap-tab"
               >
-                <img
-                  src="./assets/img/boy.svg"
-                  alt="boy img"
-                  class="boy-img"
-                />
+                <img src="./assets/img/boy.svg" alt="boy img" class="boy-img" />
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
                     <p class="section-subheading mb-0">Step 01</p>
@@ -618,8 +657,10 @@
         </div>
         <div class="row">
           <div class="col-md-12 d-flex justify-content-center">
-            <div class="input-group mt-5 explore-btn" style="width: 185px;">
-              <a href="" class="form-control explore-btn-inner">MINT YOUR NFT</a>
+            <div class="input-group mt-5 explore-btn" style="width: 185px">
+              <a href="" class="form-control explore-btn-inner"
+                >MINT YOUR NFT</a
+              >
               <div class="input-group-prepend">
                 <div class="input-group-text">
                   <img
