feature(webpack); integrate webpack and add scripts

--- a/index.html
+++ b/index.html
@@ -815,6 +815,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- custom js -->
-    <script src="./assets/js/custom.js"></script>
+    <script src="./assets/js/nft.bundle.js"></script>
   </body>
 </html>
