feat: tablet responsiveness completed

--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
     <section class="feature-section">
       <div class="custom-container">
         <div class="row">
-          <div class="col-md-5">
+          <div class="col-lg-5 col-md-4">
             <h1 class="section-heading text-center">Why Fuzion</h1>
           </div>
-          <div class="col-md-7">
+          <div class="col-lg-7 col-md-8">
             <div class="row">
               <div class="col-1">
                 <hr class="pt-4" />
@@ -167,8 +167,8 @@
         </div>
 
         <div class="row">
-          <div class="offset-md-2"></div>
-          <div class="col-md-8">
+          <div class="offset-lg-2"></div>
+          <div class="col-lg-8 col-md-12">
             <div class="feature-block">
               <div class="row no-gutters h-100">
                 <div class="col-md-2">
@@ -250,7 +250,7 @@
               </div>
             </div>
           </div>
-          <div class="offset-md-2"></div>
+          <div class="offset-lg-2"></div>
         </div>
       </div>
     </section>
@@ -258,39 +258,6 @@
 
     <!-- mecha section starts here -->
     <section class="mecha-section">
-      <!-- <div class="custom-container">
-        <div class="row">
-          <div class="offset-lg-1"></div>
-          <div class="col-lg-10 col-md-12 mekas-inner">
-            <div class="row">
-              <div class="col-md-6 d-flex justify-content-center">
-                <img
-                  src="./assets/img/punk-7480.svg"
-                  alt="mekas img"
-                  class="mekas-img"
-                />
-              </div>
-              <div class="col-md-6 pr-5">
-                <p class="section-subheading">Fuzion Punk Universe</p>
-                <h1 class="section-heading">
-                  10,000 unique punks who need Owners.
-                </h1>
-                <p class="section-txt">
-                  Quality comes first. The goal is to make our first drop as
-                  cool as possible so we can have freedom to develop the
-                  universe. We're still working on a number of rarity criteria,
-                  as well as a lot of new Lore concepts. The drop release date
-                  will be announced as soon as the project's quality and
-                  technical aspects are fully progressed. We also need to work
-                  hard with our community to make Discord and Twitter even
-                  cooler with new additions throughout time.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="offset-lg-1"></div>
-        </div>
-      </div> -->
       <div class="custom-container">
         <div class="row">
           <div class="col-md-6 d-flex justify-content-center">
@@ -374,10 +341,8 @@
               </div>
               <div class="col-11">
                 <p class="section-txt pt-4">
-                  This roadmap outlines our goals and where we want to take
-                  MekaVerse.<br />
-                  We have a lot of ideas and concepts that we are working on. It
-                  may<br />
+                  This roadmap outlines our goals and where we want to take MekaVerse.
+                  We have a lot of ideas and concepts that we are working on. It may
                   evolve over time and hopefully become even better!
                 </p>
               </div>
@@ -385,7 +350,7 @@
           </div>
         </div>
         <div class="row mt-4">
-          <div class="col-md-4">
+          <div class="col-lg-4 col-md-12">
             <div
               class="nav flex-column nav-pills roadmap-list"
               id="v-pills-tab"
@@ -444,7 +409,7 @@
               >
             </div>
           </div>
-          <div class="col-md-8 position-relative">
+          <div class="col-lg-8 col-md-12 position-relative">
             <div class="tab-content" id="v-pills-tabContent">
               <div
                 class="tab-pane fade show active"
@@ -714,10 +679,10 @@
     <section class="footer-section">
       <div class="custom-container">
         <div class="row">
-          <div class="col-lg-6 col-md-5 footer-logo">
+          <div class="col-lg-6 col-md-4 footer-logo">
             <img src="./assets/img/nft-logo.svg" alt="NFT logo" />
           </div>
-          <div class="col-lg-6 col-md-7">
+          <div class="col-lg-6 col-md-8">
             <ul class="pt-3 footer-links">
               <li><a href="#">HOME</a></li>
               <li><a href="#">TERMS & CONDITIONS</a></li>
@@ -729,10 +694,10 @@
       <hr class="footer-border" />
       <div class="custom-container">
         <div class="row">
-          <div class="col-lg-6 col-md-5">
+          <div class="col-lg-6 col-md-4">
             <p class="footer-txt">10,000 unique punks who need owners.</p>
           </div>
-          <div class="col-lg-6 col-md-7">
+          <div class="col-lg-6 col-md-8">
             <ul class="social-icons-list">
               <li class="pr-2">
                 <a href="">
@@ -815,6 +780,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- custom js -->
-    <script src="./assets/js/nft.bundle.js"></script>
+    <script src="./js/nft.bundle.js"></script>
   </body>
 </html>
