Webpack prod cc1 (#19)
* ft: webpack for production

* ft: add imagemin

* style: formatting

--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
                     </p>
                     <ul class="block-content-list">
                       <li>14% to NFT Holders</li>
-                      <li>10% to referrals (if no referral exists then will be
+                      <li>
+                        10% to referrals (if no referral exists then will be
                         split between 5 & 6)
                       </li>
                       <li>4% to PAZ holders</li>
@@ -844,7 +845,7 @@
       type="application/javascript"
     ></script>
     <!-- custom js -->
-    <script src="./js/nft.bundle.js"></script>
+    <script src="./nft.bundle.js"></script>
     <script>
       $('[data-toggle="tooltip"]').tooltip();
     </script>
